--- a/Rmd/report.Rmd
+++ b/Rmd/report.Rmd
@@ -4,8 +4,9 @@ output:
   html_document:
     df_print: paged
     toc: true
-    toc_depth: 3
+    toc_depth: 4
     toc_float: true
+bibliography: 
 ---
 
 ```{r setup, include=FALSE}
@@ -49,7 +50,7 @@ library(here)
 source(here("R", "utils.R"))
 
 # import data
-trials <- readRDS(here("Data", "trials.rds"))
+stimuli <- readRDS(here("Data", "stimuli.rds"))
 participants <- readRDS(here("Data", "participants.rds"))
 responses <- readRDS(here("Data", "responses.rds"))
 jtrace <- readRDS(here("Data", "jtrace.rds"))
@@ -106,7 +107,7 @@ ggplot(participants_coded, aes(group, fill = valid_participant)) +
 
 #### Valid trials
 
-```{r participants_trials, echo=FALSE, message=FALSE, warning=FALSE, paged.print=FALSE}
+```{r participants_stimuli, echo=FALSE, message=FALSE, warning=FALSE, paged.print=FALSE}
 
 participants_coded %>% 
   filter(valid_participant=="Valid") %>% 
@@ -204,10 +205,10 @@ participants_valid %>%
 
 ### Stimuli {.tabset .tab-pill}
 
-Participants in the ENG-SPA listened to `r nrow(trials[trials$group=="ENG-SPA",])` Spanish words, and participants in the ENG-CAT and the SPA-CAT groups listened to `r nrow(trials[trials$group=="ENG-CAT",])` trials. Five trials in each condition were practice trials and were excluded from analyses.
+Participants in the ENG-SPA listened to `r nrow(stimuli[stimuli$group=="ENG-SPA",])` Spanish words, and participants in the ENG-CAT and the SPA-CAT groups listened to `r nrow(stimuli[stimuli$group=="ENG-CAT",])` trials. Five trials in each condition were practice trials and were excluded from analyses.
 
-```{r trials_coded, message=FALSE, warning=FALSE, include=FALSE, paged.print=FALSE,  include=FALSE}
-trials_coded <- trials %>% 
+```{r stimuli_coded, message=FALSE, warning=FALSE, include=FALSE, paged.print=FALSE,  include=FALSE}
+stimuli_coded <- stimuli %>% 
   mutate(
     test_language = ifelse(group=="ENG-SPA", "Spanish", "Catalan"),
     zipf = log10(frequency)+3,
@@ -218,8 +219,8 @@ trials_coded <- trials %>%
 
 #### Lexical frequency
 
-```{r trials_frequency, echo=FALSE, message=FALSE, warning=FALSE, paged.print=FALSE}
-trials_coded %>% 
+```{r stimuli_frequency, echo=FALSE, message=FALSE, warning=FALSE, paged.print=FALSE}
+stimuli_coded %>% 
   ggplot(aes(zipf, fill = test_language)) +
   geom_histogram(bins = 25) +
   labs(x = "Lexical frequency (Zipf score)\nExtracted from CLEARPOND database", y = "# trials", fill = "Test language") +
@@ -232,8 +233,8 @@ trials_coded %>%
 
 #### PTHN
 
-```{r trials_pthn, echo=FALSE, message=FALSE, warning=FALSE, paged.print=FALSE}
-trials_coded %>% 
+```{r stimuli_pthn, echo=FALSE, message=FALSE, warning=FALSE, paged.print=FALSE}
+stimuli_coded %>% 
   count(test_language, pthn) %>% 
   ggplot(aes(reorder(as.factor(pthn), -n), n, fill = test_language)) +
   geom_col(position = position_dodge()) +
@@ -248,8 +249,8 @@ trials_coded %>%
 
 #### Phonological similarity
 
-```{r trials_similarity, echo=FALSE, message=FALSE, warning=FALSE, paged.print=FALSE}
-trials_coded %>% 
+```{r stimuli_similarity, echo=FALSE, message=FALSE, warning=FALSE, paged.print=FALSE}
+stimuli_coded %>% 
   ggplot(aes(group, lv, fill = group, colour = group)) +
   geom_violin() +
   geom_point(shape = 1, stroke = 1, position = position_jitter(width = 0.1), colour = "black", alpha = 0.25) +
@@ -263,7 +264,7 @@ trials_coded %>%
     panel.grid.major.y = element_line(colour = "grey", linetype = "dotted")
   ) +
   
-  trials_coded %>% 
+  stimuli_coded %>% 
   select(trial_id, group, ends_with("_ratio")) %>% 
   pivot_longer(ends_with("_ratio"), names_to = "type", values_to = "ratio") %>% 
   mutate(type = str_to_sentence(str_remove(type, "_ratio"))) %>% 
@@ -288,8 +289,8 @@ trials_coded %>%
 
 #### Phonological onset
 
-```{r trials_onset, echo=FALSE, message=FALSE, warning=FALSE, paged.print=FALSE}
-trials_coded %>% 
+```{r stimuli_onset, echo=FALSE, message=FALSE, warning=FALSE, paged.print=FALSE}
+stimuli_coded %>% 
   select(trial_id, group, onset) %>% 
   ggplot(aes(group, fill = onset, colour = onset)) +
   geom_bar(position = position_dodge(width = 0.9)) +
@@ -303,8 +304,8 @@ trials_coded %>%
 
 #### Phonological similarity and onset
 
-```{r trials_similarity_onset, echo=FALSE, message=FALSE, warning=FALSE, paged.print=FALSE}
-trials_coded %>% 
+```{r stimuli_similarity_onset, echo=FALSE, message=FALSE, warning=FALSE, paged.print=FALSE}
+stimuli_coded %>% 
   select(trial_id, group, lv, onset) %>% 
   ggplot(aes(lv, fill = onset, colour = onset)) +
   facet_wrap(~group, ncol = 2) +
@@ -616,13 +617,14 @@ nd <- expand_grid(
   lv = c(-1, 1)
 )
 
-m <- add_fitted_draws(nd, fit_responses, n = 20, re_formula = NA) %>% 
+m <- add_fitted_draws(nd, fit_responses, n = 50, re_formula = NA) %>% 
   mutate_at(vars(lv), function(x) paste0(x, " SD"))
 
 ggplot(m, aes(pthn, .value, colour = lv, fill = lv)) +
   stat_lineribbon(.width = 0.95, alpha = 0.25, size = 0) +
   stat_summary(fun = mean, geom = "line", size = 1) +
-  labs(x = "PTHN", y = "P(Correct)", colour = "Phon. similarity", fill = "Phon. similarity") +
+  labs(x = "Phon. neigh. dens. (SD)", y = "P(Correct)",
+       colour = "Phon. similarity", fill = "Phon. similarity") +
   scale_y_continuous(labels = scales::percent, limits= c(0, 1)) +
   guides(colour = guide_legend(ncol = 2)) +
   theme_custom() +
@@ -648,13 +650,14 @@ nd <- expand_grid(
   )
 )
 
-m <- add_fitted_draws(nd, fit_responses, n = 20, re_formula = NA) %>% 
+m <- add_fitted_draws(nd, fit_responses, n = 50, re_formula = NA) %>% 
   mutate_at(vars(pthn), function(x) paste0(x, " SD"))
 
 ggplot(m, aes(lv, .value, colour = pthn, fill = pthn)) +
   stat_lineribbon(.width = 0.95, alpha = 0.25, size = 0) +
   stat_summary(fun = mean, geom = "line", size = 1) +
-  labs(x = "Phon. similarity", y = "P(Correct)", colour = "PTHN", fill = "PTHN") +
+  labs(x = "Phon. similarity (SD)", y = "P(Correct)", colour = "Phon. neigh. dens.",
+       fill = "Phon. neigh. dens.") +
   scale_y_continuous(labels = scales::percent, limits= c(0, 1)) +
   guides(colour = guide_legend(ncol = 2)) +
   theme_custom() +
@@ -662,7 +665,7 @@ ggplot(m, aes(lv, .value, colour = pthn, fill = pthn)) +
     legend.position = "top",
     panel.grid = element_line(colour = "grey", linetype = "dotted")
   ) +
-  ggsave(here("Figures", "responses_lv.png"))
+  ggsave(here("Figures", "responses_lv.png"), height = 4, width = 4.5)
 
 ```
 
@@ -828,11 +831,11 @@ summary(fit_jtrace$fit)$fixed %>%
   ) %>% 
   tab_footnote(
     footnote = "Transformed using the inverse logit to get the average probability of correct response",
-    locations = cells_body(columns = "term", rows = term=="(Intercept)")
+    locations = cells_body(columns = "term", rows = term=="Intercept")
   ) %>% 
   tab_footnote(
     footnote = "Transformed using the divide-by-four- rule to get the maximum change in probability of correct response, associated with a unit increase in this variable.",
-    locations = cells_body(columns = "term", rows = term %in% c("pthn", "frequency", "consonant_ratio", "vowel_ratio", "onset1", "overlap_stress1") | str_detect(term, "activation"))
+    locations = cells_body(columns = "term", rows = term %in% c("pthn", "frequency", "lv", "pthn:lv") | str_detect(term, "activation"))
   ) %>% 
   tab_footnote(
     footnote = "ESS: Effective sample size",
@@ -845,7 +848,7 @@ fit_jtrace$fixed %>%
   mutate(.value = ifelse(.variable=="b_Intercept", inv_logit_scaled(.value), .value/4)) %>% 
   ggplot(aes(.value, fill = .variable)) +
   facet_wrap(~.variable, scales = "free") +
-  geom_vline(xintercept = 0, colour = "red") +
+  geom_vline(xintercept = 0, colour = "black") +
   stat_halfeye() +
   labs(x = "Value", y = "Posterior probability density", fill = "Variable") +
   theme_custom() +
@@ -853,43 +856,7 @@ fit_jtrace$fixed %>%
     legend.position = "none",
     panel.grid.major.x = element_line(colour = "grey", linetype = "dotted"),
     panel.grid.major.y = element_line(colour = "grey", linetype = "dotted"),
-    axis.text = element_text(size = 7)
-  )
-```
-
-### Random coefficients
-
-```{r jtrace_post_re, echo=FALSE, message=FALSE, warning=FALSE, paged.print=FALSE}
-re <- ranef(fit_jtrace$fit)$`group:input`
-re <- rbind(Intercept = re[,,1], activation = re[,,2]) %>% 
-  as.data.frame() %>% 
-  rownames_to_column("term") %>% 
-  mutate(
-    term = str_replace(str_remove(term, ".1"), "\\.", "\\-"),
-    Estimate = ifelse(term=="Intercept", inv_logit_scaled(Estimate), Estimate/4),
-    Q2.5 = ifelse(term=="Intercept", inv_logit_scaled(Q2.5), Q2.5/4),
-    Q97.5 = ifelse(term=="Intercept", inv_logit_scaled(Q97.5), Q97.5/4),
-    Est.Error = ifelse(term=="Intercept", inv_logit_scaled(Est.Error), Est.Error/4)
-  ) %>% 
-  separate(term, c("group", "input"), sep = "_")
-re$.param <- rep(c("Intercept", "activation"), each = 9)
-
-ggplot(re, aes(Estimate, input, colour = input)) +
-  facet_wrap(~.param) +
-  geom_vline(xintercept = 0, colour = "red") +
-  geom_errorbarh(aes(xmin = Estimate-Est.Error, xmax = Estimate+Est.Error), height = 0, size = 5, alpha = 0.5) +
-  geom_errorbarh(aes(xmin = Q2.5, xmax = Q97.5), height = 0, size = 1) +
-  geom_point() +
-  labs(x = "Estimate", y = "Input", colour = "Input") +
-  theme_custom() +
-  theme(
-    legend.position = "top",
-    legend.direction = "horizontal",
-    axis.title.x = element_blank(),
-    legend.title = element_blank(),
-    panel.grid.major.x = element_line(colour = "grey", linetype = "dotted"),
-    axis.text.y = element_blank(),
-    axis.ticks = element_blank()
+    axis.text = element_text(size = 9)
   )
 ```
 
@@ -901,7 +868,7 @@ ggplot(re, aes(Estimate, input, colour = input)) +
 
 ```{r jtrace_candidates, echo=FALSE, fig.height=30, message=FALSE, warning=FALSE, paged.print=FALSE}
 
-trials_trace <- trials %>% 
+stimuli_trace <- stimuli %>% 
   as_tibble() %>% 
   select(group, input = word1, target = word2, phon_trace)
 
@@ -932,7 +899,7 @@ trace_top <- trace %>%
   mutate(group = ifelse(language=="Catalan", "ENG-CAT", "ENG-SPA")) %>% 
   select(-language) %>% 
   # add experimental trials
-  left_join(trials_trace) %>% 
+  left_join(stimuli_trace) %>% 
   mutate(correct = response==phon_trace) %>% 
   select(group, input, response, activation, correct)
 
@@ -960,7 +927,7 @@ d_jtrace <- list(TRACE = trace_top, Participants = responses_jtrace) %>%
   ) 
 
 ggplot(d_jtrace, aes(response_reordered, activation, fill = correct)) +
-  facet_wrap(input_label~source, scales = "free_y", ncol = 2) +
+  facet_wrap(input_label~source, scales = "free_y", ncol = 3) +
   geom_col(colour = "white") +
   labs(x = "Top 10 candidates", y = "Max. TRACE activation") +
   coord_flip() +
